--- a/galerie.html
+++ b/galerie.html
@@ -11,12 +11,12 @@
 <body>
 
     <div class="hacek">
-        <p>Animace</p>
+        <p>Animation</p>
         <input type="checkbox" id="ch123">
     </div>
 
     <div class="galerie-nadpis">
-        <h1>Galerie</h1>
+        <h1>Gallery</h1>
     </div>
 
     <div class="galerie-obrazky">
@@ -28,10 +28,10 @@
                 </div>
                 <div class="navigace">
                     <ul>
-                        <li>Skvela cena</li>
-                        <li>Vynikajici hodnoceni</li>
-                        <li>Doprava zdarma</li>
-                        <li>Prvni nakup 1+1</li>
+                        <li>Great price</li>
+                        <li>Excellent rating</li>
+                        <li>Free shipping</li>
+                        <li>First purchase 1+1</li>
                     </ul>
                 </div>
             </div>
@@ -42,10 +42,10 @@
                 </div>
                 <div class="navigace">
                     <ul>
-                        <li>Skvela cena</li>
-                        <li>Vynikajici hodnoceni</li>
-                        <li>Doprava zdarma</li>
-                        <li>Prvni nakup 1+1</li>
+                        <li>Great price</li>
+                        <li>Excellent rating</li>
+                        <li>Free shipping</li>
+                        <li>First purchase 1+1</li>
                     </ul>
                 </div>
             </div>
@@ -58,10 +58,10 @@
                 </div>
                 <div class="navigace">
                     <ul>
-                        <li>Skvela cena</li>
-                        <li>Vynikajici hodnoceni</li>
-                        <li>Doprava zdarma</li>
-                        <li>Prvni nakup 1+1</li>
+                        <li>Great price</li>
+                        <li>Excellent rating</li>
+                        <li>Free shipping</li>
+                        <li>First purchase 1+1</li>
                     </ul>
                 </div>
             </div>
@@ -72,10 +72,10 @@
                 </div>
                 <div class="navigace">
                     <ul>
-                        <li>Skvela cena</li>
-                        <li>Vynikajici hodnoceni</li>
-                        <li>Doprava zdarma</li>
-                        <li>Prvni nakup 1+1</li>
+                        <li>Great price</li>
+                        <li>Excellent rating</li>
+                        <li>Free shipping</li>
+                        <li>First purchase 1+1</li>
                     </ul>
                 </div>
             </div>
@@ -88,10 +88,10 @@
                 </div>
                 <div class="navigace">
                     <ul>
-                        <li>Skvela cena</li>
-                        <li>Vynikajici hodnoceni</li>
-                        <li>Doprava zdarma</li>
-                        <li>Prvni nakup 1+1</li>
+                        <li>Great price</li>
+                        <li>Excellent rating</li>
+                        <li>Free shipping</li>
+                        <li>First purchase 1+1</li>
                     </ul>
                 </div>
             </div>
@@ -102,10 +102,10 @@
                 </div>
                 <div class="navigace">
                     <ul>
-                        <li>Skvela cena</li>
-                        <li>Vynikajici hodnoceni</li>
-                        <li>Doprava zdarma</li>
-                        <li>Prvni nakup 1+1</li>
+                        <li>Great price</li>
+                        <li>Excellent rating</li>
+                        <li>Free shipping</li>
+                        <li>First purchase 1+1</li>
                     </ul>
                 </div>
             </div>
